// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for not owner and not subscribed 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <Text
    onPress={[Function]}
  >
    You have received a wire of 1000 from
     
    <Text
      onPress={[Function]}
      style={
        Object {
          "fontWeight": "600",
        }
      }
    >
      @
      fromUser
    </Text>
  </Text>
</View>
`;

exports[`renders correctly for owner and not subscribed 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <Text
    onPress={[Function]}
  >
    You have successfully wired 1000 to
     
    <Text
      onPress={[Function]}
      style={
        Object {
          "fontWeight": "600",
        }
      }
    >
      @
      toUser
    </Text>
  </Text>
</View>
`;

exports[`renders correctly for owner and subscribed 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <Text
    onPress={[Function]}
  >
    You have subscribed to wire 1000/month to
     
    <Text
      onPress={[Function]}
      style={
        Object {
          "fontWeight": "600",
        }
      }
    >
      @
      toUser
    </Text>
  </Text>
</View>
`;

exports[`renders correctly for owner and subscribed 2`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <Text
    onPress={[Function]}
  >
    You have received a wire subscription of 1000/month from
     
    <Text
      onPress={[Function]}
      style={
        Object {
          "fontWeight": "600",
        }
      }
    >
      @
      fromUser
    </Text>
  </Text>
</View>
`;
